inspiration section added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
     </header>
     <main>
+        <!-- development section start -->
         <section class="development">
             <h2 class="development-title text-center">Why Web Development??</h2>
             <p class="section-description text-center">Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -53,6 +54,51 @@
                     <button class="btn-more">Learn More</button>
                 </div>
                 <img src="assets/Group 4.png" alt="">
+            </div>
+        </section>
+        <!-- inspiration section start -->
+        <section class="inspiration">
+            <div class="inspiration-content">
+                <h2 class="section-title">My Inspiration</h2>
+                <p class="section-description">Web development is the process of building, programming, and maintaining
+                    websites and web applications. Website developers use various programming languages, like HTML, CSS,
+                    and
+                    JavaScript,</p>
+            </div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/01l0s1iR_ZI?si=a2lRxYCQ7E4z8nuq"
+                title="YouTube video player" frameborder=""
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
+        <!-- current target section start -->
+        <section class="current-targets">
+            <div class="current-target-content">
+                <h2 class="section-title">My Current Target</h2>
+                <p class="section-description">Overall employment of web developers and digital designers is projected
+                    to
+                    grow 8 percent from 2023 to 2033, faster than the average for all occupations. About 16,500 openings
+                    for
+                    web developers and digital designers are projected each year, on average, over the decade.</p>
+            </div>
+            <div class="targets">
+                <div class="target">
+                    <img src="" alt="">
+                    <h3 class="target-title">HTML</h3>
+                    <p class="target-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <p><a href="">Learn More</a></p>
+                </div>
+                <div class="target">
+                    <img src="" alt="">
+                    <h3 class="target-title">HTML</h3>
+                    <p class="target-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <p><a href="">Learn More</a></p>
+                </div>
+                <div class="target">
+                    <img src="" alt="">
+                    <h3 class="target-title">HTML</h3>
+                    <p class="target-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <p><a href="">Learn More</a></p>
+                </div>
             </div>
         </section>
     </main>
