current targets section added

--- a/index.html
+++ b/index.html
@@ -81,23 +81,23 @@
                     web developers and digital designers are projected each year, on average, over the decade.</p>
             </div>
             <div class="targets">
-                <div class="target">
-                    <img src="" alt="">
+                <div class="target-html">
+                    <img src="assets/html.png" alt="">
                     <h3 class="target-title">HTML</h3>
-                    <p class="target-description">Lorem Ipsum is simply dummy text of the printing.</p>
-                    <p><a href="">Learn More</a></p>
+                    <p class="section-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="">Learn More</a>
                 </div>
-                <div class="target">
-                    <img src="" alt="">
+                <div class="target-css">
+                    <img src="assets/css.png" alt="">
                     <h3 class="target-title">HTML</h3>
-                    <p class="target-description">Lorem Ipsum is simply dummy text of the printing.</p>
-                    <p><a href="">Learn More</a></p>
+                    <p class="section-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="">Learn More</a>
                 </div>
-                <div class="target">
-                    <img src="" alt="">
+                <div class="target-js">
+                    <img src="assets/js.png" alt="">
                     <h3 class="target-title">HTML</h3>
-                    <p class="target-description">Lorem Ipsum is simply dummy text of the printing.</p>
-                    <p><a href="">Learn More</a></p>
+                    <p class="section-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="">Learn More</a>
                 </div>
             </div>
         </section>
