footer section added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <p class="banner-description">The demand for innovative software solutions will only continue to grow. While
                 low-level developer tasks
                 will be increasingly automated.</p>
-            <button class="btn-contact">Contact with me</button>
+            <a href="#footer">
+                <button class="btn-contact">Contact with me</button>
+            </a>
         </div>
     </header>
     <main>
@@ -101,9 +103,22 @@
                 </div>
             </div>
         </section>
+        <!-- support section start -->
+        <section class="support">
+            <h1 class="support-title">I need Support</h1>
+            <p class="support-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            </p>
+            <input type="text" name="" id="" placeholder="Suggest me any feedback for me">
+            <input type="submit" value="Submit">
+        </section>
     </main>
-    <footer>
-
+    <footer id="footer">
+        <p>An Open Commitment by Awlad Hossain</p>
+        <div class="siocal-img">
+            <img src="assets/facebook.png" alt="">
+            <img src="assets/github.png" alt="">
+            <img src="assets/linkedin-icon 1.png" alt="">
+        </div>
     </footer>
 </body>
 
