--- a/index.html
+++ b/index.html
@@ -25,16 +25,13 @@
         <!-- development section start -->
         <section class="development">
             <h2 class="development-title text-center">Why Web Development??</h2>
-            <p class="section-description text-center">Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
-                Lorem
-                Ipsum has been the
-                industry's standard dummy text.</p>
+            <p class="section-description text-center">Web development is a fast-paced and challenging career, centered
+                on creative problem-solving and continuous innovation.</p>
             <div class="section-row">
                 <div class="section-column">
                     <h3 class="column-title">I will Do Coding and Change The World</h3>
-                    <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry.</p>
+                    <p class="section-description">Without coding, we wouldn't have the websites, apps, and programs we
+                        rely on daily.</p>
                     <button class="btn-more">Learn More</button>
                 </div>
                 <img src="assets/Layer_1.png" alt="">
@@ -43,16 +40,16 @@
                 <img src="assets/Group 3.png" alt="">
                 <div class="section-column">
                     <h3 class="column-title">I will help People by creating Modern Web System</h3>
-                    <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry.</p>
+                    <p class="section-description">Modern web development architecture refers to the design and
+                        organization of the various components</p>
                     <button class="btn-more">Learn More</button>
                 </div>
             </div>
             <div class="section-row">
                 <div class="section-column">
                     <h3 class="column-title">I will Do Coding and Change The World</h3>
-                    <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry.</p>
+                    <p class="section-description">Without coding, we wouldn't have the websites, apps, and programs we
+                        rely on daily.</p>
                     <button class="btn-more">Learn More</button>
                 </div>
                 <img src="assets/Group 4.png" alt="">
@@ -86,27 +83,31 @@
                 <div class="target-html">
                     <img src="assets/html.png" alt="">
                     <h3 class="target-title">HTML</h3>
-                    <p class="section-description">Lorem Ipsum is simply dummy text of the printing.</p>
-                    <a href="">Learn More</a>
+                    <p class="section-description">HTML is the standard markup language for Web pages.With HTML you can
+                        create your own Website.</p>
+                    <a href="https://www.w3schools.com/html/" target="_blank">Learn More</a>
                 </div>
                 <div class="target-css">
                     <img src="assets/css.png" alt="">
-                    <h3 class="target-title">HTML</h3>
-                    <p class="section-description">Lorem Ipsum is simply dummy text of the printing.</p>
-                    <a href="">Learn More</a>
+                    <h3 class="target-title">CSS</h3>
+                    <p class="section-description">CSS is the language we use to style an HTML document.CSS describes
+                        how HTML elements should be displayed.
+                    </p>
+                    <a href="https://www.w3schools.com/css/" target="_blank">Learn More</a>
                 </div>
                 <div class="target-js">
                     <img src="assets/js.png" alt="">
-                    <h3 class="target-title">HTML</h3>
-                    <p class="section-description">Lorem Ipsum is simply dummy text of the printing.</p>
-                    <a href="">Learn More</a>
+                    <h3 class="target-title">JavaScript</h3>
+                    <p class="section-description">JavaScript is the world's most popular programming language.
+                        JavaScript is the programming language of the Web.</p>
+                    <a href="https://www.w3schools.com/js/" target="_blank">Learn More</a>
                 </div>
             </div>
         </section>
         <!-- support section start -->
         <section class="support">
             <h1 class="support-title">I need Support</h1>
-            <p class="support-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            <p class="support-description">Web support covers anything that is responsible for creating your website,
             </p>
             <input type="text" name="" id="" placeholder="Suggest me any feedback for me">
             <input type="submit" value="Submit">
@@ -115,9 +116,9 @@
     <footer id="footer">
         <p>An Open Commitment by Awlad Hossain</p>
         <div class="siocal-img">
-            <img src="assets/facebook.png" alt="">
-            <img src="assets/github.png" alt="">
-            <img src="assets/linkedin-icon 1.png" alt="">
+            <a target="_blank" href="https://github.com/"><img src="assets/github.png" alt=""></a>
+            <a target="_blank" href="https://www.facebook.com/"><img src="assets/facebook.png" alt=""></a>
+            <a target="_blank" href="https://www.linkedin.com/"><img src="assets/linkedin-icon 1.png" alt=""></a>
         </div>
     </footer>
 </body>
