update footer titel

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </section>
     </main>
     <footer id="footer">
-        <p>An Open Commitment by Awlad Hossain</p>
+        <p>An Open Commitment by faisal Mahmud</p>
         <div class="siocal-img">
             <a target="_blank" href="https://github.com/"><img src="assets/github.png" alt=""></a>
             <a target="_blank" href="https://www.facebook.com/"><img src="assets/facebook.png" alt=""></a>
